[project]
name = "run-snapshot-tests"
version = "0.3.3"
description = "Runner for Python [inline-snapshot](https://github.com/15r10nk/inline-snapshot/) tests with a better interface and cleaner terminal output."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Mark Lidenberg", email = "marklidenberg@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "inline-snapshot==0.8.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "dony>=0.2.1",
    "prompt-toolkit==3.0.47", # There was a breaking change in 3.0.48, broke the dony 0.2.1 select
] # uv sync --extra dev

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.setuptools]
packages = ["run_snapshot_tests"]  # otherwise, conflicts with donyfiles/ directory

# - Make run async tests automatically (requires pytest-asyncio)

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
